--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".HomeActivity">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <Space
+                    android:layout_width="10dp"
+                    android:layout_height="10dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Home"
+                    android:textColor="@color/black"
+                    android:layout_marginStart="10dp"
+                    android:textSize="25dp"
+                    android:layout_gravity="center"/>
+
+                <Space
+                    android:layout_width="100dp"
+                    android:layout_height="100dp" />
+
+                <Button
+                    android:layout_width="140dp"
+                    android:layout_height="54dp"
+                    android:layout_gravity="center"
+                    android:id="@+id/logoutButton"
+                    android:textAllCaps="false"
+                    android:backgroundTint="@color/celeste"
+                    android:textColor="@color/black"
+                    android:text="Logout"
+                    />
+                <!-- Colore dei bottoni provvisorio -->
+
+
+            </LinearLayout>
+
+        </ScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
