--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -78,7 +78,8 @@
                 android:padding="10dp"
                 android:text=""
                 android:textColorHint="@color/black"
-                android:textSize="15dp" />
+                android:textSize="15dp"
+                app:drawableStartCompat="@drawable/ic_baseline_person_24"/>
 
             <Space
                 android:layout_width="wrap_content"
@@ -104,6 +105,7 @@
                 android:padding="10dp"
                 android:text=""
                 android:textColorHint="@color/black"
+                app:drawableStartCompat="@drawable/ic_baseline_face_24"
                 android:textSize="15dp" />
 
             <Space
@@ -130,6 +132,7 @@
                 android:padding="10dp"
                 android:text=""
                 android:textColorHint="@color/black"
+                app:drawableStartCompat="@drawable/ic_baseline_face_24"
                 android:textSize="15dp" />
 
             <Space
@@ -154,6 +157,7 @@
                 android:drawablePadding="10dp"
                 android:inputType="number"
                 android:hint="Inserisci il tuo numero di telefono"
+                app:drawableStartCompat="@drawable/ic_baseline_phone_24"
                 android:padding="10dp"
                 android:text=""
                 android:textColorHint="@color/black"
@@ -183,6 +187,7 @@
                 android:padding="10dp"
                 android:text=""
                 android:textColorHint="@color/black"
+                app:drawableStartCompat="@drawable/ic_baseline_email_24"
                 android:textSize="15dp" />
 
             <Space
@@ -211,6 +216,7 @@
                 android:padding="10dp"
                 android:text=""
                 android:textColorHint="@color/black"
+                app:drawableStartCompat="@drawable/ic_baseline_key_24"
                 android:textSize="15dp" />
 
             <Space
@@ -238,6 +244,7 @@
                 android:padding="10dp"
                 android:text=""
                 android:textColorHint="@color/black"
+                app:drawableStartCompat="@drawable/ic_baseline_key_24"
                 android:textSize="15dp" />
 
             <Space
