added placeholder in drawable (xml and jpg version)

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -31,4 +31,12 @@
         android:layout_height="fill_parent" />
 
         -->
+<!-- Prova per visualizzare il segnaposto temporaneamente
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/segnapposto"
+        />
+
+    -->
 </LinearLayout>
