--- a/app/src/main/res/drawable/selectplace.xml
+++ b/app/src/main/res/drawable/selectplace.xml
@@ -5,14 +5,14 @@
     android:viewportHeight="1080">
   <path
       android:pathData="M523.5,55.1c-13.4,0.7 -31.8,3 -49,6 -19.8,3.5 -57.8,15.8 -75.5,24.5 -4.7,2.2 -11.2,5.4 -14.5,6.9 -10.3,4.9 -35.5,20.7 -48.8,30.7 -62.1,46.7 -106.3,112.7 -125.7,187.4 -9.1,35.3 -13,79.4 -9.9,112.3 3.3,34.9 11,67.8 23,97.8 11.4,28.7 12.5,30.6 118.4,203.3 5.9,9.6 17.1,27.8 24.8,40.5 7.6,12.6 16.4,26.9 19.3,31.7 13.3,21.6 17.1,27.8 31.9,52.3 8.6,14.3 16.9,27.8 18.3,29.9 1.3,2.2 6.9,11.3 12.3,20.2 10.5,17.4 59.3,97.4 66.4,108.9 7.9,12.7 15.2,17.5 26.8,17.6 8,0.1 14.7,-3.1 20.3,-9.4 2.2,-2.5 11.8,-17.4 21.4,-33.3 9.6,-15.9 23.5,-38.8 30.9,-50.9 7.3,-12.1 14.6,-24 16.1,-26.5 1.5,-2.5 22.6,-37.4 47,-77.5 24.3,-40.2 49.5,-81.6 55.8,-92 6.3,-10.5 13.9,-22.8 16.7,-27.5 7.2,-11.6 78.3,-128.8 80.5,-132.5 26.6,-45.6 39.7,-80.7 47.1,-126.5 3.7,-23.1 4.9,-62.6 2.5,-85 -2.1,-19.7 -4.3,-34 -6.6,-43 -5.1,-20.3 -7.2,-27.9 -8.9,-32.5 -1.1,-2.8 -3.7,-9.7 -5.7,-15.5 -2.1,-5.8 -7.4,-17.7 -11.7,-26.4 -20.8,-42.2 -46.5,-75.9 -81.2,-106.5 -26.4,-23.2 -51.7,-39.5 -88.5,-56.9 -19.1,-9 -60.9,-21.3 -82,-24.2 -4.7,-0.6 -10.7,-1.6 -13.5,-2.1 -5,-0.9 -35.7,-3 -40.5,-2.7 -1.4,-0 -9.2,0.5 -17.5,0.9zM567,227c11.1,2 24.3,5.5 31,8.2 1.4,0.6 3.4,1.4 4.5,1.8 5.6,2.1 22.2,10.4 26,13 2.4,1.7 4.8,3 5.4,3 0.6,-0 1.1,0.4 1.1,0.8 0,0.4 1.3,1.6 3,2.5 1.6,1 3.5,2.3 4.2,3 0.7,0.7 2.3,2 3.5,2.8 7,4.9 19.4,17.3 29.7,30 6.8,8.3 18.9,29.6 23.6,41.4 7.8,19.6 12.7,48.2 11.6,67.5 -1.2,22 -5.5,43.5 -11.6,57.5 -7.4,17 -19.1,37 -27.4,46.4 -21.3,24.3 -43.5,40.1 -71.1,50.6 -16.9,6.5 -44.3,11.4 -64.1,11.5 -20.9,0.1 -50.3,-7.1 -71.1,-17.3 -40.5,-20 -71.6,-54.6 -86.2,-96 -6.6,-18.9 -9,-32.2 -9.8,-53.7 -0.9,-27.7 4.6,-53.6 17,-79 3.8,-7.8 14,-24.8 15.6,-26 0.4,-0.3 1.8,-2.1 3.1,-4 5.2,-7.6 19,-21.5 28,-28.3 3,-2.3 5.7,-4.5 6,-4.8 2.9,-3.7 36.4,-21.9 40.2,-21.9 0.8,-0 1.8,-0.4 2.4,-0.8 1.8,-1.7 16.3,-5.6 30.4,-8.3 7.7,-1.5 13.1,-1.7 29,-1.4 10.7,0.2 22.4,0.9 26,1.5z"
-      android:fillColor="#ff0000"
-      android:strokeColor="#ff0000"/>
+      android:fillColor="#0047AB"
+      android:strokeColor="#0047AB"/>
   <path
       android:pathData="M535.1,286.8c-2.5,2 -26.8,22 -54,44.5 -27.3,22.4 -49.7,41.1 -49.9,41.6 -0.3,0.8 10,13.9 11.2,14.4 0.3,0.1 22.1,-17.6 48.6,-39.3 26.4,-21.7 48.5,-39.5 49,-39.5 0.5,-0 22.6,17.8 49,39.5 26.5,21.7 48.3,39.4 48.6,39.3 1.2,-0.5 11.5,-13.6 11.2,-14.4 -0.2,-0.5 -22.8,-19.4 -50.3,-42 -27.5,-22.6 -51.8,-42.7 -54.1,-44.5 -2.3,-1.9 -4.3,-3.4 -4.5,-3.4 -0.2,-0 -2.4,1.7 -4.8,3.8z"
-      android:fillColor="#ff0000"
-      android:strokeColor="#ff0000"/>
+      android:fillColor="#0047AB"
+      android:strokeColor="#0047AB"/>
   <path
       android:pathData="M503.8,355.8l-34.7,28.7 0,37.7 -0.1,37.8 25,-0 25,-0 0,-37.5 0,-37.5 21,-0 21,-0 0,37.5 0,37.5 25,-0 25,-0 -0.2,-37.7 -0.3,-37.7 -34.5,-28.7c-19,-15.8 -35.2,-28.7 -36,-28.7 -0.8,-0 -17.1,12.9 -36.2,28.6z"
-      android:fillColor="#ff0000"
-      android:strokeColor="#ff0000"/>
+      android:fillColor="#0047AB"
+      android:strokeColor="#0047AB"/>
 </vector>
