--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,7 +24,7 @@
                     />
 
                 <Space
-                    android:layout_width="10dp"
+                    android:layout_width="match_parent"
                     android:layout_height="10dp" />
 
                 <TextView
@@ -32,12 +32,11 @@
                     android:layout_height="wrap_content"
                     android:text="Home"
                     android:textColor="@color/black"
-                    android:layout_marginStart="10dp"
                     android:textSize="25dp"
                     android:layout_gravity="center"/>
 
                 <Space
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="100dp" />
 
                 <Button
@@ -52,7 +51,7 @@
                     />
 
                 <Space
-                    android:layout_width="10dp"
+                    android:layout_width="match_parent"
                     android:layout_height="10dp" />
 
                 <Button
@@ -67,23 +66,9 @@
                     />
 
                 <Space
-                    android:layout_width="10dp"
+                    android:layout_width="match_parent"
                     android:layout_height="10dp" />
 
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:id="@+id/insertButton"
-                    android:textAllCaps="false"
-                    android:backgroundTint="@color/celeste"
-                    android:textColor="@color/black"
-                    android:text="Inserisci nuovo annuncio"
-                    />
-
-                <Space
-                    android:layout_width="10dp"
-                    android:layout_height="10dp" />
 
                 <Button
                     android:layout_width="wrap_content"
@@ -97,7 +82,7 @@
                     />
 
                 <Space
-                    android:layout_width="10dp"
+                    android:layout_width="match_parent"
                     android:layout_height="10dp" />
 
                 <Button
@@ -112,7 +97,7 @@
                     />
 
                 <Space
-                    android:layout_width="200dp"
+                    android:layout_width="match_parent"
                     android:layout_height="200dp" />
 
                 <Button
