--- a/app/src/main/res/layout/activity_myads.xml
+++ b/app/src/main/res/layout/activity_myads.xml
@@ -36,9 +36,11 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="40dp" />
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/insertads"
             android:text="Inserisci nuovo annuncio"
             android:textAllCaps="false"
             android:layout_gravity="center"
