--- a/app/src/main/res/layout/activity_my_insertions.xml
+++ b/app/src/main/res/layout/activity_my_insertions.xml
@@ -47,10 +47,14 @@
 
             />
 
-        <!-- Qui poi ci deve essere la lista degli annunci dell'utente -->
-
-
-
+        <!-- Lista degli annunci dell'utente -->
+        <ListView
+            android:id="@+id/insertioList"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:divider="@color/material_blue_grey_800"
+            android:dividerHeight="1dp"
+            android:footerDividersEnabled="false"/>
 
     </LinearLayout>
 
