--- a/app/src/main/res/layout/activity_my_insertions.xml
+++ b/app/src/main/res/layout/activity_my_insertions.xml
@@ -46,6 +46,9 @@
             android:layout_gravity="center"
 
             />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="40dp" />
 
         <!-- Lista degli annunci dell'utente -->
         <ListView
