--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -266,6 +266,7 @@
             <ImageView android:id="@+id/pictureImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:visibility="gone"
                 android:maxHeight="300px"
                 android:maxWidth="300px"
