--- a/app/src/main/res/layout/activity_my_insertions.xml
+++ b/app/src/main/res/layout/activity_my_insertions.xml
@@ -51,13 +51,12 @@
             android:layout_height="40dp" />
 
         <!-- Lista degli annunci dell'utente -->
-        <ListView
+        <LinearLayout
             android:id="@+id/insertioList"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:divider="@color/material_blue_grey_800"
-            android:dividerHeight="1dp"
-            android:footerDividersEnabled="false"/>
+            android:orientation="vertical">
+        </LinearLayout>
 
     </LinearLayout>
 
