--- a/app/src/main/res/layout/activity_insertion.xml
+++ b/app/src/main/res/layout/activity_insertion.xml
@@ -2,7 +2,7 @@
 
 <!-- Anteprima annuncio (mostrato nella lista degli annunci) -->
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,28 +10,70 @@
 
     <!-- Da cambiare in relazione alla pagina di inserimento dei dati dell'annuncio-->
 
-
-    <!-- Immagine annuncio -->
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true" />
-
-    <!-- Descrizione Annuncio -->
-    <TextView
-        android:id="@+id/textView"
+    <TextView android:id="@+id/city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Indirizzo:"
         android:textColor="@color/black"
-        android:layout_toEndOf="@+id/icon"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+        android:layout_marginStart="10dp"
+        android:textSize="25dp" />
 
-    <!-- Cose che lo rendono completo -->
+    <Button android:id="@+id/favorites"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Preferiti"/>
+
+    <TextView android:id="@+id/address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Città:"
+        android:textColor="@color/black"
+        android:layout_marginStart="10dp"
+        android:textSize="25dp" />
+
+    <TextView android:id="@+id/descriptiom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Descrizione:"
+        android:textColor="@color/black"
+        android:layout_marginStart="10dp"
+        android:textSize="25dp" />
+
+    <!-- Immagine annuncio -->
+
+    <LinearLayout android:id="@+id/pictures"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+    </LinearLayout>
+
+    <TextView android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Proprietario: "
+        android:textColor="@color/black"
+        android:layout_marginStart="10dp"
+        android:textSize="25dp" />
+
+    <TextView android:id="@+id/number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Telefono: "
+        android:textColor="@color/black"
+        android:layout_marginStart="10dp"
+        android:textSize="25dp" />
+
+    <TextView android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email: "
+        android:textColor="@color/black"
+        android:layout_marginStart="10dp"
+        android:textSize="25dp" />
     <!-- Nome e cognome locatore, numero e email-->
-    <!-- Pulsanti modifica, elimina, archivia-->
 
-</RelativeLayout>
+
+
+
+</LinearLayout>
