--- a/app/src/main/res/layout/activity_insertion.xml
+++ b/app/src/main/res/layout/activity_insertion.xml
@@ -2,31 +2,38 @@
 
 <!-- Anteprima annuncio (mostrato nella lista degli annunci) -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <!-- Da cambiare in relazione alla pagina di inserimento dei dati dell'annuncio-->
+    <TextView android:id="@+id/address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Città:"
+        android:textColor="@color/black"
+        android:layout_marginStart="10dp"
+        android:textSize="25dp" />
+
+ <LinearLayout
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_gravity="right"
+     android:orientation="horizontal" >
+
+    <Button android:id="@+id/favorites"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+       />
+ </LinearLayout>
 
     <TextView android:id="@+id/city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Indirizzo:"
-        android:textColor="@color/black"
-        android:layout_marginStart="10dp"
-        android:textSize="25dp" />
-
-    <Button android:id="@+id/favorites"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Preferiti"/>
-
-    <TextView android:id="@+id/address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Città:"
         android:textColor="@color/black"
         android:layout_marginStart="10dp"
         android:textSize="25dp" />
