--- a/app/src/main/res/layout/activity_insertion.xml
+++ b/app/src/main/res/layout/activity_insertion.xml
@@ -4,83 +4,130 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <!-- Da cambiare in relazione alla pagina di inserimento dei dati dell'annuncio-->
-    <TextView android:id="@+id/address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Città:"
-        android:textColor="@color/black"
-        android:layout_marginStart="10dp"
-        android:textSize="25dp" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
- <LinearLayout
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:layout_gravity="right"
-     android:orientation="horizontal" >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <Button android:id="@+id/favorites"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-       />
- </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView android:id="@+id/city"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Indirizzo:"
-        android:textColor="@color/black"
-        android:layout_marginStart="10dp"
-        android:textSize="25dp" />
+            <!-- Da cambiare in relazione alla pagina di inserimento dei dati dell'annuncio-->
+            <TextView
+                android:id="@+id/city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Città:"
+                android:textColor="@color/black"
+                android:textSize="25dp" />
 
-    <TextView android:id="@+id/descriptiom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Descrizione:"
-        android:textColor="@color/black"
-        android:layout_marginStart="10dp"
-        android:textSize="25dp" />
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="10dp" />
 
-    <!-- Immagine annuncio -->
+            <Button
+                android:id="@+id/favorites"
+                android:layout_width="70dp"
+                android:layout_height="50dp"
+                android:layout_gravity="right"
+                android:backgroundTint="@color/purple_700"
+                android:drawableTop="@drawable/stella_piena" />
 
-    <LinearLayout android:id="@+id/pictures"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="10dp" />
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <TextView android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Proprietario: "
-        android:textColor="@color/black"
-        android:layout_marginStart="10dp"
-        android:textSize="25dp" />
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Indirizzo:"
+                android:textColor="@color/black"
+                android:textSize="25dp" />
 
-    <TextView android:id="@+id/number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Telefono: "
-        android:textColor="@color/black"
-        android:layout_marginStart="10dp"
-        android:textSize="25dp" />
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="20dp" />
 
-    <TextView android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email: "
-        android:textColor="@color/black"
-        android:layout_marginStart="10dp"
-        android:textSize="25dp" />
-    <!-- Nome e cognome locatore, numero e email-->
+            <TextView
+                android:id="@+id/descriptiom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Descrizione:"
+                android:textColor="@color/black"
+                android:textSize="25dp" />
 
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="20dp" />
 
+            <!-- Immagine annuncio -->
+
+            <LinearLayout
+                android:id="@+id/pictures"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="20dp" />
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Proprietario: "
+                android:textColor="@color/black"
+                android:textSize="25dp" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="20dp" />
+
+            <TextView
+                android:id="@+id/number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Telefono: "
+                android:textColor="@color/black"
+                android:textSize="25dp" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="20dp" />
+
+            <TextView
+                android:id="@+id/email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Email: "
+                android:textColor="@color/black"
+                android:textSize="25dp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
