--- a/app/src/main/res/layout/activity_new_insertion.xml
+++ b/app/src/main/res/layout/activity_new_insertion.xml
@@ -128,6 +128,15 @@
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
+            <Button
+                android:id="@+id/fpickRemove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Rimuovi foto"
+                android:textAllCaps="false"
+                android:textColor="@color/white" />
+
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="14dp" />
