update button and textview

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,6 +34,15 @@
                 android:text="Accedi"
                 android:textSize="30dp" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:drawablePadding="10dp"
+                android:text="Username:"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
+
 
             <EditText
                 android:id="@+id/username"
@@ -54,6 +63,14 @@
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:text="Password:"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
 
 
             <EditText
