--- a/app/src/main/res/layout/activity_insertion.xml
+++ b/app/src/main/res/layout/activity_insertion.xml
@@ -81,9 +81,9 @@
 
             <LinearLayout
                 android:id="@+id/pictures"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
             </LinearLayout>
 
