--- a/app/src/main/res/layout/activity_insertion.xml
+++ b/app/src/main/res/layout/activity_insertion.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- Anteprima annuncio (mostrato nella lista degli annunci) -->
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,6 +15,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="110dp"
+                android:background="@color/celeste"
+                android:src="@drawable/logo"
+                />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -65,7 +74,7 @@
                 android:layout_height="20dp" />
 
             <TextView
-                android:id="@+id/descriptiom"
+                android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
