--- a/app/src/main/res/layout/favorites_preview.xml
+++ b/app/src/main/res/layout/favorites_preview.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- Anteprima annuncio (mostrato nella lista degli annunci) -->
+<!-- Anteprima annuncio (mostrato nella lista degli annunci preferiti) -->
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,33 +8,41 @@
     android:layout_height="wrap_content"
     android:padding="16dp">
 
-    <!-- Immagine annuncio -->
-    <ImageView
-        android:id="@+id/picture"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:background="@color/black"/>
-
-    <!-- Descrizione Annuncio -->
+    <!-- TextView per la città -->
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:text="Città:"
         android:textColor="@color/black"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-        numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-        optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-        obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-        nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-        tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-        quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos
-        sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
-        recusandae alias error harum maxime adipisci amet laborum."/>
+        android:textSize="25dp" />
+
+    <TextView
+        android:id="@+id/address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_below="@id/city"
+        android:text="Indirizzo:"
+        android:textColor="@color/black"
+        android:textSize="25dp" />
+
+    <Space
+        android:layout_width="10dp"
+        android:layout_height="10dp" />
+
+    <!-- ImageView per l'immagine -->
+    <ImageView
+        android:id="@+id/picture"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="5dp"
+        android:layout_below="@id/address"
+        android:background="@color/black"/>
+
+    <Space
+        android:layout_width="10dp"
+        android:layout_height="10dp" />
 
 </RelativeLayout>
